# Mathing

./: CMakeLists.txt  LICENSE  README.md
Mathing/: CMakeLists.txt  GeneralMathFunction.h  GeneralMathOperator.h  Math.h  MathAgentDXM.h  MathType.h  MathTypeSimd.h  Mathing.cpp  Mathing.h  SimdIntger.h  SimdMathFunction.h  SimdMathOperator.h  SphericalHarmonic.h  SphericalHarmonicImpl.h  Swizzle.h  SwizzleSimd.h  SwizzleSimdImpl.h
